--- a/zen-tao/package.json
+++ b/zen-tao/package.json
@@ -2,13 +2,18 @@
   "name": "zen-tao",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8082",
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.30.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5",
+    "react-loaders": "^3.0.1",
     "react-popover": "^0.5.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.5",
     "react-toastify": "^3.4.3"
   },
   "scripts": {
